Refactored logic to allow calculating the percentage of items in pie charts. Fixed bug causing flickering popup. Style improvements.

--- a/app/client/style.less
+++ b/app/client/style.less
@@ -3,6 +3,10 @@
 }
 
 .chart-popup {
+  .title {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
   position: fixed;
   z-index: 1000;
   padding: 10px;
